<resources>
    <string name="app_name">Stormy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="error_ok_button">OK</string>
    <string name="network_unavailable">Network is unavailable!</string>
    <string name="title_activity_daily_forecast_activtiy">DailyForecastActivtiy</string>
    <string name="no_daily_forecast_data">There is no forcast data to display</string>
    <string name="title_activity_hourly_forecast">HourlyForecastActivity</string>
    <string name="loading_forecast">Getting weather data…</string>
    <string name="no_location">Finding Location…</string>
    <string name="temperature_loading">---</string>
    <string name="time_loading">…</string>
    <string name="percent_loading">--%</string>
    <string name="label_hourly">Hourly</string>
    <string name="label_daily">Daily</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_precip_chance">RAIN?</string>
    <string name="daily_forecast_title">This Week\'s Weather</string>
    <string name="hardcoded_location_label">Portland, OR</string>
    <string name="content_desc_refresh">Refresh Button</string>
    <string name="content_desc_degree_sign">degrees</string>
</resources>
